# cpputils-cmake

./: .gitignore  README.org  cpputils-cmake-pkg.el  cpputils-cmake.el  pkg.sh
example/: CMakeLists.txt
example/project_a/: CMakeLists.txt
example/project_a/src/: classes.cpp  classes.h
example/project_z/: CMakeLists.txt
example/project_z/src/: moreclasses.cpp  moreclasses.h
example/src/: main.cpp
example/subproject/: CMakeLists.txt
example/subproject/src/: classes.cpp
tests/: main.el  test.sh
